--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow|Lato:300');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat&family=Roboto&display=swap');
+
+body {
+    font-family: Barlow;
+}
+
+h1 {
+    font: 500;
+    color: #2600ff
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat&family=Roboto&display=swap');
 
 * {
     margin: 0;
@@ -16,7 +28,7 @@ body {
     color: #ff8c00
 }
 
-h2 {
+h1 {
     font-family: barlow;
     color: orangered;
     text-transform: uppercase;
@@ -24,10 +36,10 @@ h2 {
 }
 
 body {
-    font-family: Barlow;
+    font-family: barlow;
 }
 
-h2 {
+h1 {
     font-family: barlow;
     color: orangered;
     font: 500;
@@ -39,31 +51,66 @@ h2 {
     margin-left: 30px
 }
 
+.nav {
+    display: flex;
+}
+
+#menu a:link {
+    text-decoration: none;
+}
+
+#menu a:visited {
+    text-decoration: none;
+}
+
+#menu a:hover {
+    text-decoration: underline;
+}
+
+#menu a:active {
+    text-decoration: underline;
+}
+
+a:active {
+    font-weight: bold;
+}
+
 #menu {
     font-size: 110%;
     list-style-type: none;
     letter-spacing: 4px;
 }
 
+#menu li {
+    float: right;
+    margin-right: 30px;
+}
+
 
 #hero-image {
-    height: 800px;
+    height: 350px;
     width: 100%;
-    background: url("../images/bikepaint.jpg") no-repeat center !important;
+    background: url("../images/bikeworkbench.jpg") no-repeat center center;
+    background-size: cover;
+    opacity: 0.6;
     animation-name: hero-zoom;
-    animation-duration: 5s;
+    animation-duration: 4s;
     animation-fill-mode: forwards;
 }
 
 
 #hero-outer {
-    height: 600px;
+    height: 350px;
     width: 100%;
     overflow: hidden;
     position: relative
 }
 
-@keyframes hero-zoom {
+#cover-text {
+    color: white;
+}
+
+#hero-outer @keyframes hero-zoom {
     from {
         transform: scale(1);
     }
@@ -78,23 +125,20 @@ h2 {
     font-family: Barlow;
     text-transform: uppercase;
     letter-spacing: 4px;
-
     width: 300px;
-    height: 250px;
-
+    height: 150px;
     padding-top: 40px;
     padding-left: 10px;
-
-    background-color: rgba(241, 109, 107, .7);
-
+    background-color: rgba(38, 0, 255, 0.6);
     bottom: 30px;
     right: 150px;
-
     position: absolute;
+    border-radius: 15px;
 }
 
 body {
     font-family: Barlow;
+    color: #000;
 }
 
 h2 {
@@ -102,7 +146,10 @@ h2 {
     color: aqua
 }
 
-
+.card-image-top {
+    text-align: center;
+    object-fit: cover;
+}
 
 @keyframes hero-zoom {
     from {
@@ -114,13 +161,123 @@ h2 {
     }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat&family=Roboto&display=swap');
 
-body {
-    font-family: Barlow;
+hr {
+    border-top: 1px solid #777777;
+    width: 100%;
+    margin: 5px
+}
+#why-us{
+    text-align: center;
+    padding: 30px 10px;
 }
 
-h2 {
-    font: 500;
-    color: aqua
+#why-us-header{
+    padding: 40px 20px;
+}
+.left-about-heading {
+    width: 100%;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.right-about-heading {
+    width: 100%;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    text-align: center;
+
+}
+
+
+
+
+
+#choice {
+    margin: 20px o;
+    text-align: center;
+    font-size: 200%;
+    text: transform:uppercase
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #cccccc;
+    border-width: 1px;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/workerrw.jpg)no-repeat center center;
+    background-size: contain;
+    height: 100%;
+}
+
+#services div {
+    width: 100%;
+    clear: both;
+    height: 150px;
+    border-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #fff;
+    padding: 0;
+}
+
+footer {
+    background-color: #000000;
+    padding: 5px;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 200%;
+    margin: 1%;
+    padding: 0;
+    color: #777777;
+}
+
+.table {
+    table-layout: auto;
+    width: 75%;
+}
+
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    ...
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    ...
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    ...
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    ...
 }
