--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
     font-family: Barlow;
     max-width: 1920px;
+    margin: auto;
 }
 
 h1 {
@@ -78,9 +79,10 @@ a:active {
 #hero-image {
     height: 350px;
     width: 100%;
-    background: url("../images/bikeworkbench.jpg") no-repeat center center;
+    background: url("../images/bikeworkbench.webp") no-repeat center center;
     background-size: cover;
     opacity: 0.6;
+
     animation-name: hero-zoom;
     animation-duration: 4s;
     animation-fill-mode: forwards;
@@ -95,7 +97,7 @@ a:active {
 
 /* creates the fade-in for the hero image */
 
-#hero-outer @keyframes hero-zoom {
+@keyframes hero-zoom {
     from {
         transform: scale(1);
     }
@@ -245,7 +247,6 @@ footer {
 }
 .services-table{
     margin:auto;
-    position:absolute;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 100px;
